# lclab2

./: .gitmodules  ApplicationTemplate  CMakeLists.txt  README.txt  SolverTemplate
Release/: README.txt
Release/LCLAB 2 (Linux)/: imgui.ini  lclab2.sh
Release/LCLAB 2 (Linux)/lib/: libCorradePluginManager.so.2.4  libCorradeUtility.so.2.4  libMagnum.so.2.4  libMagnumGL.so.2.4  libMagnumMeshTools.so.2.4  libMagnumPrimitives.so.2.4  libMagnumSceneGraph.so.2.4  libMagnumShaders.so.2.4  libMagnumTrade.so.2.4
Release/LCLAB 2 (Windows)/: lclab2.exe.lnk
custom/cuda/: README.txt  cuda_occupancy_impl.h.in
custom/hemi/: configure.h.in
custom/primitives/: CF1.lmt  cf1_straight.lmt
data/: small_toron.lmt  test.lmt  test3.txt  test4.txt  test6.txt  test7.txt  toron.lmt  toron_pbc.lmt
lclab2/: README.txt  lclab2.h
lclab2/src/: CMakeLists.txt
lclab2/src/algorithm/: CMakeLists.txt  cpuknn.cpp  cpuknn.h
lclab2/src/algorithm/loop_subdivision/: Edge.cpp  Edge.h  Face.cpp  Face.h  FormTrait.cpp  FormTrait.h  HalfEdge.cpp  HalfEdge.h  Iterators.h  LOOP.cpp  LOOP.h  Mesh.cpp  Mesh.h  Point.cpp  Point.h  Trait.cpp  Trait.h  Vertex.cpp  Vertex.h  loop_subdivision_impl.cpp  loop_subdivision_impl.h
lclab2/src/base/: Application.cpp  Application.h  Argument.h  Arguments.h  Configuration.h  ConsoleApplication.cpp  ConsoleApplication.h  Header.cpp  Header.h  SIscalar.h  application.cpp  application.h  core.h  entrypoint.h  logger.cpp  logger.h  scalar.h
lclab2/src/cuda/: CMakeLists.txt  CudaContext.cu  CudaContext.cuh  CudaContext.h
lclab2/src/frankoseen/: liquidcrystal.h
lclab2/src/graphics/: ArcBall.cpp  ArcBall.h  CMakeLists.txt  DynamicColorSheet.cpp  DynamicColorSheet.h  EllipsoidArray.cpp  EllipsoidArray.h  NematicArray.cpp  NematicArray.h  NormalSheet.cpp  NormalSheet.h  NormalTorus.cpp  NormalTorus.h  Sheet.cpp  Sheet.h  SphereArray.cpp  SphereArray.h  Surface.cpp  Surface.h  Torus.cpp  Torus.h  TransparentDrawable.h  TransparentNormalDrawable.h  TubularSurface.cpp  TubularSurface.h
lclab2/src/imaging/: BMP.h  CMakeLists.txt  ImageSeries.cpp  ImageSeries.h  POM.cpp  POM.h  RungeSphere.h
lclab2/src/implementation/: CMakeLists.txt  Context.cpp  Context.h  Context.hpp  ImContext.cpp  ImContext.h  Integration.h  Widgets.h  visibility.h
lclab2/src/math/: AdvancingFront.cpp  AdvancingFront.h  BaryonDensity.h  BoxBlur3D.h  CMakeLists.txt  ChiralityField.cpp  ChiralityField.h  ChiralityTensor.h  Choose.cpp  Choose.h  CumulativeTrapIntegral.cpp  CumulativeTrapIntegral.h  Derivative.h  Fields.cpp  Fields.h  Graph.h  HopfCharge.cpp  HopfCharge.h  IsoVertex.cpp  IsoVertex.h  Isosurface.cpp  Isosurface.h  LinearInterpolate.cpp  LinearInterpolate.h  LinearInterpolator.cpp  LinearInterpolator.h  MaxEigen.h  Metric.cpp  Metric.h  Normalize.h  RangePair.cpp  RangePair.h  ScalarOrderParameter.h  StencilWeights.cpp  StencilWeights.h  Vector.cpp  Vector.h  poly_spline.cpp  poly_spline.h  powi.cpp  (+10 more)
lclab2/src/math/ExtendedMC/: LookUpTable.h  MarchingCubes.cpp  MarchingCubes.h  defs.h  ply.cpp  ply.h
lclab2/src/smoothing/: CMakeLists.txt  mesh.hpp  smooth_alg.cpp  smooth_alg.hpp  vec3.hpp
lclab2/src/smoothing/topology/: vertex_to_1st_ring_vertices.cpp  vertex_to_1st_ring_vertices.hpp  vertex_to_face.cpp  vertex_to_face.hpp
lclab2/src/solver/: CMakeLists.txt  Solver.h
lclab2/src/solver/film/: FilmSolver.cpp  FilmSolver.h
lclab2/src/solver/frankoseen/: FOAssets.h  FOFDSolver.cpp  FOFDSolver.cu  FOFDSolver.h  RBFFDSolver.cpp  RBFFDSolver.cu  RBFFDSolver.h
lclab2/src/solver/qtensor/: QTensorAssets.h  QTensorSolver.cpp  QTensorSolver.h
lclab2/src/utility/: CMakeLists.txt  range_pair.h  searchlist.cpp  searchlist.h
matlab/: POM.m  S2_hsv.m  Saving.txt  Untitled.m  calculate_harmonics.m  calculate_harmonics_lib.m  call_chi.m  chi_vortices.m  dominant_harmonics.m  exp_trajectory.m  f_Ylm.m  f_chi.m  f_preimage.m  fread_ElasticOnly.m  fread_RBF.m  fread_RBF_to_grid.m  fread_fd.m  fread_foel.m  fread_foel_to_mat.m  fread_lmt.m  fwrite_foel.m  fwrite_mat_to_foel.m  hopf_index.m  interaction_mapping.m  interaction_mapping_radial (2).m  interaction_mapping_radial.m  interaction_mapping_z_amplitude.m  interaction_path.m  iso_energy_plotter.m  load_interaction_data.m  load_interaction_data2.m  mag_heli_pathfinder.m  mat_to_list.m  power_method_left.m  power_method_right.m  preimage_video.m  preimage_xsection_new.m  ribbon.m  spherical_harmonics.m  splay_bend.m  (+5 more)
matlab/harmonic_lib/: getSHrotMtx.m
matlab/publication_scripts/: POM_video.m  S2_hsv.m  energy_plotter.m  f_vortex_cyl.m  f_vortex_knot.m  fread_foel.m  fread_lmt.m  modify_foel.m  parameter_plotter.m  plyscr.m  plyscr_single.m  relax7.m  scatter3sph.m
modules/: FindImGui.cmake
projects/: CMakeLists.txt
projects/FO-electric/: CMakeLists.txt  CrossSection.h  FOelectric-main-official.cpp  FOelectric-main.cpp  InteractionWidget.h  LehmanCluster.h  NematicMultiplaneManager.h  QuaternionFromBasis.h  SmoothIsosurface.h  Widget.h  ZProfile.h  find_components.h  minimal_list.h
projects/c-elastic/: CMakeLists.txt  c-elastic.cpp
projects/c-interaction-anisotropy/: CMakeLists.txt
projects/c-rbf-fd/: CMakeLists.txt  c-rbf-fd.cpp
projects/film-activation/: Boxes.h  CMakeLists.txt  DropDownMenu.h  FilmApplication.cpp  Line.h  Quadrilateral.h  Shader.h  Simulation.h  Widget.h  ZProfile.h
projects/rbf-fd/: CMakeLists.txt  Widget.h  rbf-main.cpp
projects/rbf-fd-e/: CMakeLists.txt  rbf-fd-e.cpp
python/: bmp_to_avi.py  load_nn.py
sandbox/: CMakeLists.txt  Widget.h  sandboxApp.cpp
